novel-updates-rating: add rating sort

--- a/strings/languages/en/strings.json
+++ b/strings/languages/en/strings.json
@@ -302,6 +302,7 @@
         "download": "Downloaded",
         "lastRead": "Last read",
         "lastUpdated": "Last updated",
+        "rating": "Rating",
         "totalChapters": "Total chapters",
         "unread": "Unread"
       }
