chapter-sync: update

--- a/strings/languages/en/strings.json
+++ b/strings/languages/en/strings.json
@@ -400,6 +400,8 @@
     },
     "tracked": "Tracked",
     "tracking": "Tracking",
+    "syncTrue": "Synced '%{name}' status",
+    "syncFalse": "Failed to sync '%{name}' status",
     "unknownStatus": "Unknown status",
     "updatedToast": "Updated %{name}"
   },
