--- a/strings/languages/en/strings.json
+++ b/strings/languages/en/strings.json
@@ -400,8 +400,9 @@
     },
     "tracked": "Tracked",
     "tracking": "Tracking",
-    "syncTrue": "Synced '%{name}' status",
-    "syncFalse": "Failed to sync '%{name}' status",
+    "syncTrue": "Synced to '%{name}'",
+    "syncFalse": "Failed to sync to '%{name}'",
+    "syncError": "Error syncing to '%{name}': %{error}",
     "unknownStatus": "Unknown status",
     "updatedToast": "Updated %{name}"
   },
