--- a/strings/languages/en/strings.json
+++ b/strings/languages/en/strings.json
@@ -358,6 +358,7 @@
       "useCustomJSWarning": "May not be supported by all EPUB readers",
       "useReaderTheme": "Use reader theme"
     },
+    "coverSaved": "Cover saved",
     "deleteChapterError": "Cant delete chapter chapter folder",
     "deleteMessage": "Delete downloaded chapters?",
     "deletedAllDownloads": "Deleted all Downloads",
@@ -392,6 +393,7 @@
     },
     "migrate": "Migrate",
     "noSummary": "No summary",
+    "noCoverFound": "No cover found",
     "progress": "Progress %{progress} %",
     "readChaptersDeleted": "Read chapters deleted",
     "startReadingChapters": "Start reading %{name}",
