fix: handle storage permission for saving novel cover image

--- a/strings/languages/en/strings.json
+++ b/strings/languages/en/strings.json
@@ -359,6 +359,7 @@
       "useReaderTheme": "Use reader theme"
     },
     "coverSaved": "Cover saved",
+    "coverNotSaved": "Cover not saved",
     "deleteChapterError": "Cant delete chapter chapter folder",
     "deleteMessage": "Delete downloaded chapters?",
     "deletedAllDownloads": "Deleted all Downloads",
