Added Catppuccin Theme

--- a/strings/languages/en/strings.json
+++ b/strings/languages/en/strings.json
@@ -55,7 +55,8 @@
       "tako": "Tako",
       "teal": "Teal",
       "turquoise": "Turquoise",
-      "yotsuba": "Yotsuba"
+      "yotsuba": "Yotsuba",
+      "catppuccin": "Catppuccin"
     }
   },
   "backupScreen": {
