--- a/strings/languages/en/strings.json
+++ b/strings/languages/en/strings.json
@@ -361,14 +361,20 @@
     "chapterChapnum": "Chapter %{num}",
     "chapters": "chapters",
     "continueReading": "Continue reading",
-    "convertToEpubModal": {
-      "chaptersWarning": "Only downloaded chapters are included in the EPUB",
-      "chooseLocation": "Select EPUB storage directory",
-      "pathToFolder": "Path to EPUB save folder",
-      "useCustomCSS": "Use custom CSS",
-      "useCustomJS": "Use custom JS",
-      "useCustomJSWarning": "May not be supported by all EPUB readers",
-      "useReaderTheme": "Use reader theme"
+    "exportEpubModal": {
+      "applyReaderTheme": "Apply reader theme to EPUB",
+      "customJSWarning": "Custom JavaScript may not be supported by all EPUB readers",
+      "downloadedChaptersOnly": "Only downloaded chapters will be included in the EPUB file",
+      "includeCustomCSS": "Include Custom CSS",
+      "includeCustomJS": "Include Custom JS",
+      "selectFolder": "Select destination folder for EPUB file",
+      "title": "Export Novel as EPUB"
+    },
+    "epub": {
+      "exportFailed": "Failed to export EPUB: %{error}",
+      "exportSuccess": "Successfully exported %{chapters} chapters as EPUB",
+      "noDownloadedChapters": "No downloaded chapters found. Please download chapters before exporting.",
+      "noNovelSelected": "No novel selected for export"
     },
     "coverSaved": "Cover saved",
     "coverNotSaved": "Cover not saved",
